labs/lab-special/k-resources/graphql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
spec:
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
    spec:
      containers:
        - name: graphql
          image: labspecial-graphql
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-graphql
  labels:
    run: svc-graphql
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: graphql
